--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,7 @@
-version: '3.8'
-
 services:
-  rnapp:
+  expo-app:
     build: .
+    container_name: react-native-expo-news-app
     ports:
-      - "8081:8081"
-    volumes:
-      - .:/app
-    environment:
-      - NODE_ENV=development
+      - "8081:80"
+    restart: unless-stopped
